docs/v0.3.0a3/_sources/reference/_autosummary/hpcflow.sdk.persistence.json.JSONPersistentStore.rst.txt
hpcflow.sdk.persistence.json.JSONPersistentStore
================================================

.. currentmodule:: hpcflow.sdk.persistence.json

.. autoclass:: JSONPersistentStore
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~JSONPersistentStore.add_EAR
      ~JSONPersistentStore.add_element
      ~JSONPersistentStore.add_element_iteration
      ~JSONPersistentStore.add_element_set
      ~JSONPersistentStore.add_file
      ~JSONPersistentStore.add_loop
      ~JSONPersistentStore.add_set_parameter
      ~JSONPersistentStore.add_submission
      ~JSONPersistentStore.add_task
      ~JSONPersistentStore.add_template_components
      ~JSONPersistentStore.add_unset_parameter
      ~JSONPersistentStore.cache_ctx
      ~JSONPersistentStore.cached_load
      ~JSONPersistentStore.check_parameters_exist
      ~JSONPersistentStore.copy
      ~JSONPersistentStore.delete
      ~JSONPersistentStore.delete_no_confirm
      ~JSONPersistentStore.get_EAR_skipped
      ~JSONPersistentStore.get_EARs
      ~JSONPersistentStore.get_creation_info
      ~JSONPersistentStore.get_dirs_array
      ~JSONPersistentStore.get_element_iterations
      ~JSONPersistentStore.get_elements
      ~JSONPersistentStore.get_jobscript_at_submit_metadata
      ~JSONPersistentStore.get_jobscript_block_dependencies
      ~JSONPersistentStore.get_jobscript_block_run_ID_array
      ~JSONPersistentStore.get_jobscript_block_task_actions_array
      ~JSONPersistentStore.get_jobscript_block_task_elements_map
      ~JSONPersistentStore.get_loops
      ~JSONPersistentStore.get_loops_by_IDs
      ~JSONPersistentStore.get_name
      ~JSONPersistentStore.get_parameter_set_statuses
      ~JSONPersistentStore.get_parameter_sources
      ~JSONPersistentStore.get_parameters
      ~JSONPersistentStore.get_submission_at_submit_metadata
      ~JSONPersistentStore.get_submissions
      ~JSONPersistentStore.get_submissions_by_ID
      ~JSONPersistentStore.get_task
      ~JSONPersistentStore.get_task_elements
      ~JSONPersistentStore.get_tasks
      ~JSONPersistentStore.get_tasks_by_IDs
      ~JSONPersistentStore.get_template
      ~JSONPersistentStore.get_template_components
      ~JSONPersistentStore.get_text_file
      ~JSONPersistentStore.get_ts_fmt
      ~JSONPersistentStore.get_ts_name_fmt
      ~JSONPersistentStore.make_test_store_from_spec
      ~JSONPersistentStore.parameters_metadata_cache
      ~JSONPersistentStore.prepare_test_store_from_spec
      ~JSONPersistentStore.rechunk_parameter_base
      ~JSONPersistentStore.rechunk_runs
      ~JSONPersistentStore.reinstate_replaced_dir
      ~JSONPersistentStore.remove_path
      ~JSONPersistentStore.remove_replaced_dir
      ~JSONPersistentStore.rename_path
      ~JSONPersistentStore.save
      ~JSONPersistentStore.set_EAR_end
      ~JSONPersistentStore.set_EAR_skip
      ~JSONPersistentStore.set_EAR_start
      ~JSONPersistentStore.set_EARs_initialised
      ~JSONPersistentStore.set_file
      ~JSONPersistentStore.set_jobscript_metadata
      ~JSONPersistentStore.set_multi_run_ends
      ~JSONPersistentStore.set_multi_run_starts
      ~JSONPersistentStore.set_parameter_value
      ~JSONPersistentStore.set_parameter_values
      ~JSONPersistentStore.set_run_dirs
      ~JSONPersistentStore.set_run_submission_data
      ~JSONPersistentStore.unzip
      ~JSONPersistentStore.update_at_submit_metadata
      ~JSONPersistentStore.update_iter_data_indices
      ~JSONPersistentStore.update_loop_num_iters
      ~JSONPersistentStore.update_loop_parents
      ~JSONPersistentStore.update_param_source
      ~JSONPersistentStore.update_run_data_indices
      ~JSONPersistentStore.using_resource
      ~JSONPersistentStore.write_empty_workflow
      ~JSONPersistentStore.zip
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~JSONPersistentStore.EAR_cache
      ~JSONPersistentStore.element_cache
      ~JSONPersistentStore.element_iter_cache
      ~JSONPersistentStore.has_pending
      ~JSONPersistentStore.is_submittable
      ~JSONPersistentStore.logger
      ~JSONPersistentStore.num_EARs_cache
      ~JSONPersistentStore.num_params_cache
      ~JSONPersistentStore.num_tasks_cache
      ~JSONPersistentStore.param_sources_cache
      ~JSONPersistentStore.parameter_cache
      ~JSONPersistentStore.task_cache
      ~JSONPersistentStore.ts_fmt
      ~JSONPersistentStore.use_cache
      ~JSONPersistentStore.workflow
   
   